--- a/index.html
+++ b/index.html
@@ -16,54 +16,54 @@
             <h1>Saiba tudo sobre cada signo</h1>
             <div class="signos-button">
                 <div class="aries signos-button-content ">
-                    <img class="item-aries" src="/arquivos/ares.png" alt="" onclick="showTabs('aries-conteudo')">
+                    <img class="item-aries" src="./arquivos/ares.png" alt="" onclick="showTabs('aries-conteudo')">
                 </div>
 
                 <div class="touro signos-button-content ">
-                    <img class="item-touro" src="/arquivos/touro.png" alt="" onclick="showTabs('touro-conteudo')">
+                    <img class="item-touro" src="./arquivos/touro.png" alt="" onclick="showTabs('touro-conteudo')">
                 </div>
 
                 <div class="gemeos signos-button-content ">
-                    <img class="item-gemeos" src="/arquivos/gemeos.png" alt="" onclick="showTabs('gemeos-conteudo')">
+                    <img class="item-gemeos" src="./arquivos/gemeos.png" alt="" onclick="showTabs('gemeos-conteudo')">
                 </div>
 
                 <div class="cancer signos-button-content ">
-                    <img class="item-cancer" src="/arquivos/cancer.png" alt="" onclick="showTabs('cancer-conteudo')">
+                    <img class="item-cancer" src="./arquivos/cancer.png" alt="" onclick="showTabs('cancer-conteudo')">
                 </div>
 
                 <div class="leao signos-button-content ">
-                    <img class="item-leao" src="/arquivos/leao.png" alt="" onclick="showTabs('leao-conteudo')">
+                    <img class="item-leao" src="./arquivos/leao.png" alt="" onclick="showTabs('leao-conteudo')">
                 </div>
 
                 <div class="virgem signos-button-content ">
-                    <img class="item-virgem" src="/arquivos/virgem.png" alt="" onclick="showTabs('virgem-conteudo')">
+                    <img class="item-virgem" src="./arquivos/virgem.png" alt="" onclick="showTabs('virgem-conteudo')">
                 </div>
 
                 <div class="libra signos-button-content ">
-                    <img class="item-libra" src="/arquivos/libra.png" alt="" onclick="showTabs('libra-conteudo')">
+                    <img class="item-libra" src="./arquivos/libra.png" alt="" onclick="showTabs('libra-conteudo')">
                 </div>
 
                 <div class="escorpiao signos-button-content ">
-                    <img class="item-escorpiao" src="/arquivos/escorpiao.png" alt=""
+                    <img class="item-escorpiao" src="./arquivos/escorpiao.png" alt=""
                         onclick="showTabs('escorpiao-conteudo')">
                 </div>
 
                 <div class="sagitario signos-button-content ">
-                    <img class="item-sagitario" src="/arquivos/sagitario.png" alt=""
+                    <img class="item-sagitario" src="./arquivos/sagitario.png" alt=""
                         onclick="showTabs('sagitario-conteudo')">
                 </div>
 
                 <div class="capricornio signos-button-content ">
-                    <img class="item-capricornio" src="/arquivos/capricornio.png" alt=""
+                    <img class="item-capricornio" src="./arquivos/capricornio.png" alt=""
                         onclick="showTabs('capricornio-conteudo')">
                 </div>
 
                 <div class="aquario signos-button-content ">
-                    <img class="item-aquario" src="/arquivos/aquario.png" alt="" onclick="showTabs('aquario-conteudo')">
+                    <img class="item-aquario" src="./arquivos/aquario.png" alt="" onclick="showTabs('aquario-conteudo')">
                 </div>
 
                 <div class="peixes signos-button-content ">
-                    <img class="item-peixes" src="/arquivos/peixes.png" alt="" onclick="showTabs('peixes-conteudo')">
+                    <img class="item-peixes" src="./arquivos/peixes.png" alt="" onclick="showTabs('peixes-conteudo')">
                 </div>
             </div>
         </div>
